--- a/cyo-housesale-project/housesale_report.Rmd
+++ b/cyo-housesale-project/housesale_report.Rmd
@@ -25,49 +25,13 @@ This project is part of the final course - **Data Science: Capstone** in Harvard
 The project studies the dataset - **House Sales in King County, USA** available on Kaggle. The different features are studied and its impact evaluated on the pricing. Thus, a house price recommendation system is developed to predict the house prices. 
 
 ## About the dataset
-The dataset - **House Sales in King County, USA: Predict house price using regression** is taken from Kaggle. Kaggle, a subsidiary of Google LLC, is an online community of data scientists and machine learning practitioners. Kaggle allows users to find and publish data sets, explore and build models in a web-based data-science environment, work with other data scientists and machine learning engineers, and enter competitions to solve data science challenges. It contains price data of **21613** houses wherin every house has **21** features. \
+The dataset - **House Sales in King County, USA: Predict house price using regression** is taken from Kaggle. \
+Kaggle, a subsidiary of Google LLC, is an online community of data scientists and machine learning practitioners. Kaggle allows users to find and publish data sets, explore and build models in a web-based data-science environment, work with other data scientists and machine learning engineers, and enter competitions to solve data science challenges. \
+The dataset contains **21613** rows and **21** columns. \
 **Go to kaggle page**: *<https://www.kaggle.com/harlfoxem/housesalesprediction>* 
 
 ## Goal of the project
-The goal of the project is study the dataset and develop a model that can predict house prices with reasonable accuracy.
-
-## Key steps to reach the final model
-The initial parts of the project will help to gain insights into the data through tabular and visual means. This is done in R language and use the publicly available powerful *R* libraries like ggplot. Next, models are trained with the different alogrithms and the model with the best RMSE is chosen to validate against the final validation set.
-
-\newpage
-
-<!-------------------------------------------------------------------------------------------------------->
-# Ready the data
-
-## Cleanup the data for more valuable features
-
-A re-usable function is defined to extract and add new columns for release and review years from already available data. The edX dataset is processed here. The validation dataset will also be mutated to add the release and review years after the final model is developed.
-```{r, echo = FALSE, warning=FALSE, message=FALSE}
-
-```
-
-```{r, echo = TRUE, warning=FALSE, message=FALSE}
-add_release_and_review_years <- function(dataset) {
-  # Trim and split title (year) column into title and year columns
-  dataset <- dataset %>% mutate(title = str_trim(title)) %>%
-              extract(title, c("title_temp", "release_year"), 
-                      regex = "^(.*) \\(([0-9 \\-]*)\\)$", remove = F) %>%
-              mutate(release_year = if_else((str_length((release_year)) > 4), 
-                      as.integer(str_split(release_year, "-", simplify = T)[1]), 
-                      as.integer(release_year))) %>%
-              mutate(title = if_else(is.na(title_temp), title, title_temp)) %>%
-              select(-title_temp)
-  
-   # Convert timestamp column into date format, removing time data & get review year from it
-  dataset <- dataset %>% mutate(review_date = round_date(as_datetime(timestamp), unit = "week"))
-  dataset <- dataset %>% mutate(review_year = year(review_date))
-  dataset
-}
-
-# Add the release and review years to edx set as well
-edx <- add_release_and_review_years(edx)
-
-```
+The goal of the project is to exhaustively study the dataset and get valuable insights through data processing and visualization. Furthermore different ML algorithms are used to train a model that can predict house price.
 
 \newpage
 
@@ -78,21 +42,17 @@ edx <- add_release_and_review_years(edx)
 
 ### Structure of edx dataset: Column Names & Types
 ```{r, echo=TRUE, warning=FALSE, message=FALSE}
-str(edx)
+str(housedata)
 ```
 
 ### Data in edx dataset: First few rows
 ```{r, echo=TRUE, warning=FALSE, message=FALSE}
-head(edx)
+head(housedata)
 ```
 
 <!-- Create plot theme to apply to ggplot2 element text throughout report-->
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-# Create plot theme to apply to ggplot2 element text throughout report
-plot_theme <- theme(plot.caption = element_text(size = 7, face = "italic"), 
-                    axis.title = element_text(size = 11))
-
-caption_text <- "PH125.9x | Source: edx 10M MovieLens | Somnath Saha"
+#TODO
 ```
 
 ## Plot distribution of ratings in the edx dataset
@@ -266,112 +226,6 @@ predicted_ratings <-  mu + (edx_test %>%
 rmse_model_b_m <- RMSE(edx_test$rating, predicted_ratings)
 ```
 
-```{r, echo=FALSE}
-#Add the calculated RMSE to the RMSE Table
-captionTableType1 <- "RMSE Values for 2.x Model series"
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 2.1: Mean with movie effect",
-                                   RMSE = rmse_model_b_m ))
-rmse_table %>% knitr::kable(caption = captionTableType1)
-```
-
-### Model 2.2:  Mean with user effect
-```{r, echo=TRUE}
-#Train on the edx training set to find user effect
-user_effects <-     edx_train %>% 
-                    group_by(userId) %>% 
-                    summarize(b_u = mean(rating - mu))
-
-#Generate predictions on the edx test set
-predicted_ratings <-  mu + (edx_test %>% 
-                              left_join(user_effects, by='userId') %>%
-                              .$b_u)
-
-#Find RMSE for this model
-rmse_model_b_u <- RMSE(edx_test$rating, predicted_ratings)
-```
-
-```{r, echo=FALSE}
-#Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 2.2: Mean with user effect",
-                                   RMSE = rmse_model_b_u ))
-rmse_table %>% knitr::kable(caption = captionTableType1)
-```
-
-### Model 2.3: Mean with genre effect
-```{r, echo=TRUE}
-#Train on the edx training set to find genres effect
-genre_effects   <-  edx_train %>%
-                    group_by(genres) %>%
-                    summarize(b_g = mean(rating - mu))
-
-#Generate predictions on the edx test set
-predicted_ratings <-  mu + (edx_test %>% 
-                              left_join(genre_effects, by = 'genres') %>%
-                              .$b_g)
-
-#Find RMSE for this model
-rmse_model_b_g <- RMSE(edx_test$rating, predicted_ratings)
-```
-
-```{r, echo=FALSE}
-#Add the RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method = "Model 2.3: Mean with genre effect",
-                                   RMSE = rmse_model_b_g ))
-rmse_table %>% knitr::kable(caption = captionTableType1)
-```
-
-### Model 2.4:  Mean with release year effect
-```{r, echo=TRUE}
-#Train on the edx training set to find user effect
-release_yr_effects <- edx_train %>% 
-                      group_by(release_year) %>% 
-                      summarize(b_yr_release = mean(rating - mu))
-
-#Generate predictions on the edx test set
-predicted_ratings <-  mu + (edx_test %>% 
-                              left_join(release_yr_effects, by='release_year') %>%
-                              .$b_yr_release)
-
-#Find RMSE for this model
-rmse_model_b_yr_release <- RMSE(edx_test$rating, predicted_ratings)
-```
-
-```{r, echo=FALSE}
-#Add the RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 2.4: Mean with release year effect",
-                                   RMSE = rmse_model_b_yr_release ))
-rmse_table %>% knitr::kable(caption = captionTableType1)
-
-```
-
-### Model 2.5:  Mean with review year effect
-```{r, echo=TRUE}
-#Train on the edx training set to find user effect
-review_yr_effects <-  edx_train %>% 
-                      group_by(review_year) %>% 
-                      summarize(b_yr_review = mean(rating - mu))
-
-#Generate predictions on the edx test set
-predicted_ratings <-  mu + (edx_test %>% 
-                              left_join(review_yr_effects, by='review_year') %>%
-                              .$b_yr_review)
-
-#Find RMSE for this model
-rmse_model_b_yr_review <- RMSE(edx_test$rating, predicted_ratings)
-```
-
-```{r, echo=FALSE}
-#Add the RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 2.5: Mean with review year effect",
-                                   RMSE = rmse_model_b_yr_review ))
-rmse_table %>% knitr::kable(caption = captionTableType1)
-```
-
 \newpage
 
 ## Model 3.x:  Study of models involving two effects in different forms
@@ -399,162 +253,15 @@ rmse_table <- bind_rows(rmse_table,
 rmse_table %>% knitr::kable(caption = captionTableType2)
 ```
 
-### Model 3.2:  Mean with movie and cumulative user effect
-```{r, echo=TRUE}
-# Add user effect to Model 2.1 (Movie effects model)
-user_effects_comb <-    edx_train %>% 
-                        left_join(movie_effects, by='movieId') %>%
-                        group_by(userId) %>% 
-                        summarize(b_u = mean(rating - mu - b_m))
-
-# Generate predictions on the edx test set
-predicted_ratings <-  edx_test %>% 
-                      left_join(movie_effects, by='movieId') %>%
-                      left_join(user_effects_comb, by='userId') %>%
-                      mutate(pred = mu + b_m + b_u) %>%
-                      .$pred
-
-# Find RMSE for this model
-rmse_model_3_2 <- RMSE(edx_test$rating, predicted_ratings)
-```
-
-```{r, echo=FALSE}
-#Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 3.2: Mean + Movie + Cum. User Effect",
-                                   RMSE = rmse_model_3_2 ))
-rmse_table %>% knitr::kable(caption = captionTableType2)
-```
-
-### Model 3.3:  Mean with user and cumulative movie effect
-```{r, echo=TRUE}
-#Train on the edx training set to find movie effect including user effect
-combined_user_movie_effects <-    edx_train %>% 
-                                  left_join(user_effects, by='userId') %>%
-                                  group_by(movieId) %>% 
-                                  summarize(b_m = mean(rating - mu - b_u))
-
-#Generate predictions on the edx test set
-predicted_ratings <-  edx_test %>% 
-                      left_join(user_effects, by='userId') %>%
-                      left_join(combined_user_movie_effects, by='movieId') %>%
-                      mutate(pred = mu + b_m + b_u) %>%
-                      .$pred
-
-#Find RMSE for this model
-rmse_model_3_3 <- RMSE(edx_test$rating, predicted_ratings)
-```
-
-```{r, echo=FALSE}
-#Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 3.3: Mean + User + Cum. Movie Effect",
-                                   RMSE = rmse_model_3_3 ))
-rmse_table %>% knitr::kable(caption = captionTableType2)
-```
-
-### Model 3.x Observations
-
-It can be observed from the 3.x models that the order in which the features are chosen makes a difference. It is better to choose movie effects first and then the user effects in cumulative manner instead of training with them independently or choosing them in a different order.
-
-Next, the effects would be chosen in increasing order of their RMSE values based on their independent effect models. Thus, the sequence would be movie, user, genre, release year & review year effects. 
-
 ## Model 4.x: Towards the model involving all the effects
 
 ### Model 4.1:  Model of movie, user, genre effects in respective order
 ```{r, echo=TRUE}
-# Add genre effect to Model 3.2 that already includes movie and user effects
-genre_effects_comb <- edx_train %>%
-                      left_join(movie_effects, by = "movieId") %>%
-                      left_join(user_effects_comb, by = "userId") %>%
-                      group_by(genres) %>%
-                      summarise(b_g = mean(rating - mu - b_m - b_u))
 
-# Predict ratings adjusting for movie, user and genre effects
-predicted_ratings <-  edx_test %>%
-                      left_join(movie_effects, by = "movieId") %>%
-                      left_join(user_effects_comb, by = "userId") %>%
-                      left_join(genre_effects_comb, by = "genres") %>%
-                      mutate(pred = mu + b_m + b_u + b_g) %>%
-                      pull(pred)
-
-# Calculate RMSE based on genre effects model
-rmse_model_4_1 <- RMSE(predicted_ratings, edx_test$rating)
 ```
 
 ```{r, echo=FALSE}
-#Add the new RMSE to the RMSE Table
-captionTableType4 <- "RMSE Values for 4.x Model series"
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 4.1: Mean + Movie + User + Genre Effect",
-                                   RMSE = rmse_model_4_1 ))
-rmse_table %>% knitr::kable(caption = captionTableType4)
-```
 
-### Model 4.2:  Model of movie, user, genre & release year effects in respective order 
-```{r, echo=TRUE}
-# Estimate release year effect (b_yr_release)
-release_year_effects_comb <-  edx_train %>%
-                              left_join(movie_effects, by = "movieId") %>%
-                              left_join(user_effects_comb, by = "userId") %>%
-                              left_join(genre_effects_comb, by = "genres") %>%
-                              group_by(release_year) %>%
-                              summarise(b_yr_release = mean(rating - mu - b_m - b_u - b_g))
-
-# Predict ratings adjusting for movie, user, genre and year effects
-predicted_ratings <-  edx_test %>%
-                      left_join(movie_effects, by = "movieId") %>%
-                      left_join(user_effects_comb, by = "userId") %>%
-                      left_join(genre_effects_comb, by = "genres") %>%
-                      left_join(release_year_effects_comb, by = "release_year") %>%
-                      mutate(pred = mu + b_m + b_u + b_g + b_yr_release) %>%
-                      pull(pred)
-
-# Calculate RMSE based on year effects model
-rmse_model_4_2 <- RMSE(predicted_ratings, edx_test$rating)
-```
-
-```{r, echo=FALSE}
-#Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 4.2: Mean + Genre + Movie + User + Release Yr Effect",
-                                   RMSE = rmse_model_4_2 ))
-rmse_table %>% knitr::kable(caption = captionTableType4)
-```
-
-### Model 4.3:  Model of movie, user, genre effects, release year & review year effects in respective order
-
-```{r, echo=TRUE}
-# Estimate review date effect (b_yr_review)
-review_yr_effects_comb <- edx_train %>%
-                          left_join(movie_effects, by = "movieId") %>%
-                          left_join(user_effects_comb, by = "userId") %>%
-                          left_join(genre_effects_comb, by = "genres") %>%
-                          left_join(release_year_effects_comb, by = "release_year") %>%
-                          group_by(review_year) %>%
-                          summarise(b_yr_review = mean(rating - mu - b_m - 
-                                                         b_u - b_g - b_yr_release))
-```
-
-```{r, echo=FALSE}
-# Predict ratings adjusting for movie, user, genre, year and review date effects
-predicted_b_yr_review <- edx_test %>%
-                          left_join(movie_effects, by = "movieId") %>%
-                          left_join(user_effects_comb, by = "userId") %>%
-                          left_join(genre_effects_comb, by = "genres") %>%
-                          left_join(release_year_effects_comb, by = "release_year") %>%
-                          left_join(review_yr_effects_comb, by = "review_year") %>%
-                          mutate(pred = mu + b_m + b_u + b_g + b_yr_release + b_yr_review) %>%
-                          pull(pred)
-
-# Calculate RMSE based on review date effects model
-rmse_model_4_3 <- RMSE(predicted_b_yr_review, edx_test$rating)
-
-#Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 4.3: Mean + Genre + Movie + User + Release Yr + Review Yr Effect",
-                                   RMSE = rmse_model_4_3 ))
-rmse_table %>% knitr::kable(caption = captionTableType4)
 ```
 
 ## Model 5.0: Effects of Regularization on the model
@@ -565,21 +272,7 @@ Regularization is a form of regression, that constrains/ regularizes or shrinks 
 
 Regularization process involves finding out an optimal lambda to tune the model. A common function is defined to find the RMSE for particular lambda on Model 3.2.
 ```{r, echo=TRUE}
-find_rmse_for_lambda <- function(l) {
-  #Train on the edx training set to find user effect including movie effect
-  combined_movie_user_effects <-  edx_train %>% 
-                                  left_join(movie_effects, by='movieId') %>%
-                                  group_by(userId) %>% 
-                                  summarize(b_u = sum(rating - mu - b_m)/(n()+l))
-  #Generate predictions on the edx test set
-  predicted_ratings <-  edx_test %>% 
-                        left_join(movie_effects, by='movieId') %>%
-                        left_join(combined_movie_user_effects, by='userId') %>%
-                        mutate(pred = mu + b_m + b_u) %>%
-                        .$pred
-  #Find RMSE for this model
-  RMSE(edx_test$rating, predicted_ratings)
-}  
+
 ```
 
 ### Finding the optimal value of lambda
@@ -629,126 +322,17 @@ rmse_table %>% knitr::kable(caption = "RMSE Values for All Models")
 ## Model 6.0: Model with all features and regularization
 ```{r, echo=TRUE, eval=TRUE}
 # Regularise model, predict ratings and calculate RMSE for passed value of lambda
-train_predict_get_rmse <- function(l, trainSet, testSet)
-{
-  b_m   <-        trainSet %>%
-                  group_by(movieId) %>%
-                  summarise(b_m = sum(rating - mu)/(n()+l))
-  b_u   <-        trainSet %>%
-                  left_join(b_m, by="movieId") %>%
-                  group_by(userId) %>%
-                  summarise(b_u = sum(rating - b_m - mu)/(n()+l))
-  b_g   <-        trainSet %>%
-                  left_join(b_m, by="movieId") %>%
-                  left_join(b_u, by="userId") %>%
-                  group_by(genres) %>%
-                  summarise(b_g = sum(rating - b_m - b_u - mu)/(n()+l))
-  b_yr_release <- trainSet %>%
-                  left_join(b_m, by="movieId") %>%
-                  left_join(b_u, by="userId") %>%
-                  left_join(b_g, by="genres") %>%
-                  group_by(release_year) %>%
-                  summarise(b_yr_release = sum(rating - b_m - b_u - b_g - mu)/(n()+l))
-  b_yr_review <-  trainSet %>%
-                  left_join(b_m, by="movieId") %>%
-                  left_join(b_u, by="userId") %>%
-                  left_join(b_g, by="genres") %>%
-                  left_join(b_yr_release, by="release_year") %>%
-                  group_by(review_year) %>%
-                  summarise(b_yr_review = sum(rating - b_m - b_u - b_g - mu)/(n()+l))
-  
-  predicted_ratings <-  testSet %>%
-                        left_join(b_m, by="movieId") %>%
-                        left_join(b_u, by="userId") %>%
-                        left_join(b_g, by="genres") %>%
-                        left_join(b_yr_release, by="release_year") %>%
-                        left_join(b_yr_review, by="review_year") %>%
-                        mutate(pred = mu + b_m + b_u + b_g + b_yr_release + b_yr_review) %>%
-                        pull(pred)
-  
-  return (RMSE(predicted_ratings, testSet$rating))
-}
-# Generate a sequence of values for lambda ranging from 4 to 6 with 0.1 increments
-inc <- 0.1
-lambdas <- seq(4, 6, inc)
 
-# Get RMSE values for all the lambdas
-rmses <- sapply(lambdas, function(l) {  train_predict_get_rmse(l, edx_train, edx_test) })
-
-# Assign optimal tuning parameter (lambda)
-optimal_lambda <- lambdas[which.min(rmses)]
-
-# Minimum RMSE achieved
-regularised_rmse <- min(rmses) 
-
-#Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="Model 6: Regularized Model of Movie + User + Genre + Release Yr + Review Yr Effect",
-                                   RMSE = regularised_rmse ))
-rmse_table %>% knitr::kable(caption = "RMSE Values for All Models")
 ```
 
 # RMSE on validation set with final chosen model
 
 ```{r, echo=FALSE, eval=TRUE}
-# Calculate and store the model parameters to be used in the MovieRecommender Model
-# with the optimal value of lambda
-  l     <-        optimal_lambda
-  b_m   <-        edx_train %>%
-                  group_by(movieId) %>%
-                  summarise(b_m = sum(rating - mu)/(n()+l))
-  b_u   <-        edx_train %>%
-                  left_join(b_m, by="movieId") %>%
-                  group_by(userId) %>%
-                  summarise(b_u = sum(rating - b_m - mu)/(n()+l))
-  b_g   <-        edx_train %>%
-                  left_join(b_m, by="movieId") %>%
-                  left_join(b_u, by="userId") %>%
-                  group_by(genres) %>%
-                  summarise(b_g = sum(rating - b_m - b_u - mu)/(n()+l))
-  b_yr_release <- edx_train %>%
-                  left_join(b_m, by="movieId") %>%
-                  left_join(b_u, by="userId") %>%
-                  left_join(b_g, by="genres") %>%
-                  group_by(release_year) %>%
-                  summarise(b_yr_release = sum(rating - b_m - b_u - b_g - mu)/(n()+l))
-  b_yr_review <-  edx_train %>%
-                  left_join(b_m, by="movieId") %>%
-                  left_join(b_u, by="userId") %>%
-                  left_join(b_g, by="genres") %>%
-                  left_join(b_yr_release, by="release_year") %>%
-                  group_by(review_year) %>%
-                  summarise(b_yr_review = sum(rating - b_m - b_u - b_g - mu)/(n()+l))
+
 ```
 
 ```{r, echo=TRUE, eval=TRUE}
-MovieRecommenderModel <- function(predictInputSet)
-{
-      # Add release and review years that are used in our model
-      predictInputSet <- add_release_and_review_years(predictInputSet)
 
-      # Predict using the values of the various feature effects found
-      predicted_ratings <-  predictInputSet %>%
-                        left_join(b_m, by="movieId") %>%
-                        left_join(b_u, by="userId") %>%
-                        left_join(b_g, by="genres") %>%
-                        left_join(b_yr_release, by="release_year") %>%
-                        left_join(b_yr_review, by="review_year") %>%
-                        mutate(pred = mu + b_m + b_u + b_g + b_yr_release + b_yr_review) %>%
-                        pull(pred)
-      
-      #Return the predictions
-      predicted_ratings
-}
-
-predicted_ratings <- MovieRecommenderModel(validation)
-final_rmse_validation_set <- RMSE(validation$rating, predicted_ratings)
-
-# Add the new RMSE to the RMSE Table
-rmse_table <- bind_rows(rmse_table,
-                        data_frame(method="RMSE on validation set using Model 5",
-                                   RMSE = final_rmse_validation_set))
-rmse_table %>% knitr::kable(caption = "RMSE Values for All Models")
 
 ```
 
